Fixed orientation. Portrait always.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="se.kth.sda.othello.LoginActivity">
+                android:configChanges="orientation"
+                android:screenOrientation="portrait"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="se.kth.sda.othello.MenuActivity">
+        <activity android:name="se.kth.sda.othello.MenuActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name="se.kth.sda.othello.MainActivity">
+        <activity android:name="se.kth.sda.othello.MainActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
